@@ -1,5 +1,5 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.mt</groupId>
@@ -8,7 +8,6 @@
     <version>3.1.2-SNAPSHOT</version>
 
     <name>maven-web-application</name>
-
     <description>Maven Web Project for Java Project</description>
 
     <organization>
@@ -18,10 +17,10 @@
 
     <properties>
         <jdk.version>1.8</jdk.version>
-        <spring.version>5.1.2.RELEASE</spring.version>
-        <junit.version>4.11</junit.version>
+        <spring.version>5.3.36</spring.version>
+        <junit.version>4.13.2</junit.version>
         <log4j.version>1.2.17</log4j.version>
-        <sonar.host.url>http://18.221.207.24:9000/</sonar.host.url> <!-- Updated SonarQube URL -->
+        <sonar.host.url>http://172.31.16.175:8000</sonar.host.url>
         <sonar.login>admin</sonar.login>
         <sonar.password>admin</sonar.password>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -35,19 +34,12 @@
             <version>20160212</version>
         </dependency>
 
-        <!-- test dependencies -->
+        <!-- Test dependencies -->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>3.8.1</version>
+            <version>${junit.version}</version>
             <scope>test</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>javax.servlet-api</artifactId>
-            <version>3.1.2</version>
-            <scope>provided</scope>
         </dependency>
 
         <dependency>
@@ -57,7 +49,15 @@
             <scope>test</scope>
         </dependency>
 
-        <!-- compile dependencies -->
+        <!-- Provided dependencies -->
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>3.1.0</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <!-- Compile dependencies -->
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-core</artifactId>
@@ -78,38 +78,28 @@
             <artifactId>spring-context</artifactId>
             <version>${spring.version}</version>
         </dependency>
-
-        <!-- provided dependencies -->
-        <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>javax.servlet-api</artifactId>
-            <version>3.1.0</version>
-            <scope>provided</scope>
-        </dependency>
     </dependencies>
 
     <distributionManagement>
         <repository>
             <id>nexus</id>
             <name>JOMACS Releases Nexus Repository</name>
-            <url>http://172.31.54.85:8081/repository/gtb-app-release/</url>
+            <url>http://172.31.17.47:8081/repository/gtb-release/</url>
         </repository>
-
         <snapshotRepository>
-            <id>nexus</id>
+            <id>nexus-snapshots</id>
             <name>JOMACS Snapshot Nexus Repository</name>
-            <url>http://172.31.54.85:8081/repository/gtb-app-snapshot/</url>
+            <url>http://172.31.17.47:8081/repository/gtb-snapshot/</url>
         </snapshotRepository>
     </distributionManagement>
 
     <build>
         <finalName>web-app</finalName>
-
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.3</version>
+                <version>3.10.1</version>
                 <configuration>
                     <source>${jdk.version}</source>
                     <target>${jdk.version}</target>
@@ -119,7 +109,7 @@
             <plugin>
                 <groupId>org.eclipse.jetty</groupId>
                 <artifactId>jetty-maven-plugin</artifactId>
-                <version>9.2.11.v20150529</version>
+                <version>11.0.15</version>
                 <configuration>
                     <scanIntervalSeconds>10</scanIntervalSeconds>
                     <webApp>
@@ -129,36 +119,9 @@
             </plugin>
 
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-eclipse-plugin</artifactId>
-                <version>2.9</version>
-                <configuration>
-                    <downloadSources>true</downloadSources>
-                    <downloadJavadocs>true</downloadJavadocs>
-                    <wtpversion>2.0</wtpversion>
-                    <wtpContextName>maven-web-application</wtpContextName>
-                </configuration>
-            </plugin>
-
-            <!-- Add maven-war-plugin -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-war-plugin</artifactId>
-                <version>3.3.2</version> <!-- Updated version -->
-            </plugin>
-
-            <!-- Add SonarQube plugin -->
-            <plugin>
                 <groupId>org.sonarsource.scanner.maven</groupId>
                 <artifactId>sonar-maven-plugin</artifactId>
-                <version>4.0.0.4121</version>
-                <configuration>
-                    <javaOpts>
-                        <arg>-Dsonar.java.binaries=target/classes</arg>
-                        <arg>-Dsonar.java.source=17</arg>
-                        <arg>--add-opens java.base/java.lang=ALL-UNNAMED</arg> <!-- Added JVM option for Java 11 module issue -->
-                    </javaOpts>
-                </configuration>
+                <version>3.9.1.2184</version>
             </plugin>
         </plugins>
     </build>
